<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.talleroperaciones.talleroperaciones.AreasCalculator"
    android:orientation="vertical"
    android:padding="35px">

    <TextView
        android:id="@+id/areas_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/areas_title"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"/>


    <LinearLayout
        android:id="@+id/squareCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/square_side" />

            <EditText
                android:id="@+id/squareSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="18dp"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateSquareAreaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateSquareArea"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteSquareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rectangleCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label1"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/base" />

            <EditText
                android:id="@+id/rectangleBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label2"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/height" />

            <EditText
                android:id="@+id/rectangleHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateRectangleAreaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateRectangleArea"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteRectangleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/triangleCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label3"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/base" />

            <EditText
                android:id="@+id/triangleBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label4"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/height" />

            <EditText
                android:id="@+id/triangleHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateTriangleAreaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculatetriangleArea"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteTriangleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/circleCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/radio" />

            <EditText
                android:id="@+id/circleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateCircleAreaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateCircleArea"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteCircleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
