<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.talleroperaciones.talleroperaciones.VolumesCalculator"
    android:orientation="vertical"
    android:padding="35px">

    <TextView
        android:id="@+id/volumes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volumes_title"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"/>


    <LinearLayout
        android:id="@+id/sphereCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/radio" />

            <EditText
                android:id="@+id/sphereRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="18dp"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateSphereVolumeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateSphereVolume"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteSphereBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clear"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/cylinderCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label1"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/radio" />

            <EditText
                android:id="@+id/cylinderRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label2"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/height" />

            <EditText
                android:id="@+id/cylinderHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateCylinderVolumeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateCylinderVolume"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteCylinderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clear"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/coneCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label3"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/radio" />

            <EditText
                android:id="@+id/coneRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label4"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/height" />

            <EditText
                android:id="@+id/coneHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateConeVolumeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateConeVolume"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteConeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clear"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cubeCalculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/height" />

            <EditText
                android:id="@+id/cubeHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculateCubeVolumeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculateCubeVolume"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/deleteCubeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clear"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
